Updated Giving/TransactionEntry Block  - Reimplemented pulling ACH from recent check  - Fixed payment information collapse on mobile  - Fixed + improved auto-changing to a valid date when frequency is changed  - Added error highlighting on validation  - Can now select individual accounts to show

--- a/RockWeb/Themes/NewpointeMain/Styles/theme.less
+++ b/RockWeb/Themes/NewpointeMain/Styles/theme.less
@@ -962,6 +962,9 @@ th.dow {
 .datepicker table td.day.old, td.day.new {
     color: #808080 !important;
 }
+.datepicker.datepicker-dropdown:after {
+    border-bottom-color: @accent-semibold-color;
+}
 /* hide block panels */
 .panel.panel-block {
     border: 0;
